--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
             <li>Name: Johnny Liver</li>
             <li>Age: 15</li>
-            <li>Location: Los Angles</li>
+            <li>Location: LOS ANGELES </li>
             <li>Occupation: Web Developer</li>
             <li>Skills: HTML, CSS, JavaScript, React</li>
 
